# ccglib

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  async_copies.h  bf.cu  gemm_kernel.cu  transpose_kernel.cuh  wmma_extension.h
.github/workflows/: benchmark_cuda.yml  build_cuda.yml  build_hip.yml  linting.yml  test.yml  test_cuda.yml  test_hip.yml  tune_cuda.yml
benchmark/: CMakeLists.txt  benchmark_gemm.cpp  benchmark_gemm.cu  benchmark_packing.cpp  benchmark_packing.cu  benchmark_transpose.cpp  benchmark_transpose.cu
cmake/: ccglib-config.cmake.in  ccglib-targets.cmake  config.h.in  helper.cmake  openmp.cmake  xtensor.cmake
example/: CMakeLists.txt  example.cpp  example.cu  example.hip
include/ccglib/: async_copies.h  bf16.h  ccglib.hpp  fp16.h  fp4.h  fp6.h  fp8.h  helper.h  precision.h  wmma_extension.h
include/ccglib/common/: arch.h  complex_order.h  direction.h  helper.h  precision.h  value_precision.h  value_type.h
include/ccglib/gemm/: complex_order.h  mem_order.h  mma.h  precision.h  reference.h  variant.h
include/ccglib/packing/: packing.h
include/ccglib/pipeline/: pipeline.h
include/ccglib/transpose/: complex_order.h  transpose.h
kernels/: async_copies.h  gemm_kernel.cu  gemm_kernel_float.cu  gemm_kernel_float16.cu  gemm_kernel_int1.cu  matrix_operations.h  packing_kernel.cu  sync_copies.h  transpose_kernel.cu  type_selector.h  type_traits.h  wmma_extension.h
src/: CMakeLists.txt  bf.cu
src/helper/: helper.h
src/mma/: CMakeLists.txt  GEMM.cpp  GEMM.h  Kernel.cpp  Kernel.h  KernelBfloat16.cpp  KernelFloat16.cpp  KernelFloat32.cpp  KernelFloat4.cpp  KernelFloat6.cpp  KernelFloat8.cpp  KernelInt1.cpp
src/packing/: CMakeLists.txt  Packing.cpp
src/pipeline/: CMakeLists.txt  Pipeline.cpp
src/reference/: CMakeLists.txt  GEMM.cpp  GEMM.h
src/transpose/: CMakeLists.txt  Transpose.cpp  Transpose.h
test/: CMakeLists.txt  fpequals.h  gemm.cpp  helper.cpp  reference.cpp  verify.h
test/cuda/: mma.cpp  packing.cpp  pipeline.cpp  transpose.cpp
test/gemm/: arch.h  fpequals.h  mma.cpp  reference.cpp  verify.h
test/hip/: mma.cpp  packing.cpp  pipeline.cpp  transpose.cpp
test/packing/: packing.cpp
test/pipeline/: pipeline.cpp
test/transpose/: transpose.cpp
tuning/: ncu_metrics.py  tune_gemm.py
